# api-python-wildsene-interview

./: .gitignore  Dockerfile  README.md  answers.md  docker-compose.yaml  pyproject.toml
.github/workflows/: workflow.yaml
app/: main.py
app/core/: __init__.py  image_classifier.py  utils.py
app/events/: event_handlers.py
app/routers/: hello_name.py  model.py
tests/: test_hello_name.py  test_image_classifier.py
